--- a/Read Before Interview/JavaScript/SuperSimpleDev/RockPaperScissors.html
+++ b/Read Before Interview/JavaScript/SuperSimpleDev/RockPaperScissors.html
@@ -26,74 +26,77 @@
     score.wins = 0;
     score.losses = 0;
     score.ties = 0;
+    localStorage.removeItem('score');
   ">Reset Score</button>
 
   <script>
 
-    const score = JSON.parse(localStorage.getItem('score'));
-    // {
-    //   wins: 0,
-    //   losses: 0,
-    //   ties: 0
-    // };
+    let score = JSON.parse(localStorage.getItem('score')) || {
+        wins: 0,
+        losses: 0,
+        ties: 0
+      };
 
-    // console.log(
-    //   localStorage.getItem(JSON.parse('score'))
-    //   );
-    console.log(
-      JSON.parse(localStorage.getItem('score'))
-      );
+/*
+      if (score === null) {
+        score = {
+          wins: 0,
+          losses: 0,
+          ties: 0
+        };
+      }
+*/
 
     function playGame(playerMove) {
       const computerMove = randomNumber();
       let result;
 
-      if(playerMove === 'scissors'){
+      if (playerMove === 'scissors') {
 
-          if (computerMove === 'rock') {
-            result = 'You lose.'
-          } else if (computerMove === 'paper') {
-            result = 'You win.'
-          } else if (computerMove === 'scissors') {
-            result = 'Tie.'
-          }
+        if (computerMove === 'rock') {
+          result = 'You lose.'
+        } else if (computerMove === 'paper') {
+          result = 'You win.'
+        } else if (computerMove === 'scissors') {
+          result = 'Tie.'
+        }
 
-      } 
-
-      else if(playerMove === 'paper'){
-
-          if(computerMove === 'rock'){
-            result = 'You win.'
-          } else if (computerMove === 'paper'){
-            result = 'Tie.'
-          } else if (computerMove === 'scissors'){
-            result = 'You lose.'
-          }
-
-
-      } 
-
-      else if(playerMove === 'rock'){
-
-          if(computerMove === 'rock'){
-            result = 'Tie.'
-          } else if (computerMove === 'paper'){
-            result = 'You lose.'
-          } else if (computerMove === 'scissors'){
-            result = 'You win.'
-          }
       }
 
-      if(result === 'You win.'){
+      else if (playerMove === 'paper') {
+
+        if (computerMove === 'rock') {
+          result = 'You win.'
+        } else if (computerMove === 'paper') {
+          result = 'Tie.'
+        } else if (computerMove === 'scissors') {
+          result = 'You lose.'
+        }
+
+
+      }
+
+      else if (playerMove === 'rock') {
+
+        if (computerMove === 'rock') {
+          result = 'Tie.'
+        } else if (computerMove === 'paper') {
+          result = 'You lose.'
+        } else if (computerMove === 'scissors') {
+          result = 'You win.'
+        }
+      }
+
+      if (result === 'You win.') {
         score.wins += 1;
       }
-      else if(result === 'You lose.'){
+      else if (result === 'You lose.') {
         score.losses += 1;
       }
-      else if(result === 'Tie.'){
+      else if (result === 'Tie.') {
         score.ties += 1;
       }
-      
+
       localStorage.setItem('score', JSON.stringify(score));
 
       alert(`You chose ${playerMove}. Computer chose ${computerMove}. ${result} 
