--- a/Read Before Interview/JavaScript/SuperSimpleDev/DOM/project2.html
+++ b/Read Before Interview/JavaScript/SuperSimpleDev/DOM/project2.html
@@ -1,123 +1,42 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Rock Paper Scissors</title>
+    <title>Shipping Charge Calculator</title>
   </head>
   <body>
-    <p>Rock Paper Scissors</p>
-    <button onclick="
-      playGame('rock');
-    ">Rock</button>
 
+    <p>Amazon Shipping Calculator</p>
+    <input placeholder="Cost of order" class="js-cost-input" onkeydown="
+      handleCostKeydown(event);
+    ">
     <button onclick="
-      playGame('paper');
-    ">Paper</button>
-
-    <button onclick="
-      playGame('scissors');
-    ">Scissors</button>
-
-    <p class="js-result"></p>
-    <p class="js-moves"></p>
-    <p class="js-score"></p>
-
-    <button onclick="
-      score.wins = 0;
-      score.losses = 0;
-      score.ties = 0;
-      localStorage.removeItem('score');
-      updateScoreElement();
-    ">Reset Score</button>
+      calculateTotal();
+    ">Calculate</button>
+    <p class="js-total-cost"></p>
 
     <script>
-      let score = JSON.parse(localStorage.getItem('score')) || {
-        wins: 0,
-        losses: 0,
-        ties: 0
-      };
-
-      updateScoreElement();
-
-      /*
-      if (!score) {
-        score = {
-          wins: 0,
-          losses: 0,
-          ties: 0
-        };
-      }
-      */
-
-      function playGame(playerMove) {
-        const computerMove = pickComputerMove();
-
-        let result = '';
-
-        if (playerMove === 'scissors') {
-          if (computerMove === 'rock') {
-            result = 'You lose.';
-          } else if (computerMove === 'paper') {
-            result = 'You win.';
-          } else if (computerMove === 'scissors') {
-            result = 'Tie.';
-          }
+      
+      function handleCostKeydown(event) {
+        if (event.key === 'Enter') {
+          calculateTotal();
         }
-         else if (playerMove === 'paper') {
-          if (computerMove === 'rock') {
-            result = 'You win.';
-          } else if (computerMove === 'paper') {
-            result = 'Tie.';
-          } else if (computerMove === 'scissors') {
-            result = 'You lose.';
-          }
-        } 
-        else if (playerMove === 'rock') {
-          if (computerMove === 'rock') {
-            result = 'Tie.';
-          } else if (computerMove === 'paper') {
-            result = 'You lose.';
-          } else if (computerMove === 'scissors') {
-            result = 'You win.';
-          }
-        }
-
-        if (result === 'You win.') {
-          score.wins += 1;
-        } else if (result === 'You lose.') {
-          score.losses += 1;
-        } else if (result === 'Tie.') {
-          score.ties += 1;
-        }
-
-        localStorage.setItem('score', JSON.stringify(score));
-
-        updateScoreElement();
-
-        document.querySelector('.js-result').innerHTML = result;
-
-        document.querySelector('.js-moves').innerHTML = `You ${playerMove} - Computer ${computerMove}`;
       }
 
-      function updateScoreElement() {
-        document.querySelector('.js-score')
-          .innerHTML = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
-      }
+      function calculateTotal() {
+        const inputElement = document.querySelector('.js-cost-input');
 
-      function pickComputerMove() {
-        const randomNumber = Math.random();
+      // for input element no innerHTML but value
+      // Whenever we get a value from the DOM, the value will be a string
+        let cost = Number(inputElement.value);
 
-        let computerMove = '';
-
-        if (randomNumber >= 0 && randomNumber < 1 / 3) {
-          computerMove = 'rock';
-        } else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
-          computerMove = 'paper';
-        } else if (randomNumber >= 2 / 3 && randomNumber < 1) {
-          computerMove = 'scissors';
+        if (cost < 40) {
+          cost = cost + 10;
         }
 
-        return computerMove;
+        document.querySelector('.js-total-cost')
+          .innerHTML = `$${cost}`;
       }
+      
     </script>
   </body>
 </html>
